substrate/frame/support/test/tests/construct_runtime_v2_ui/missing_runtime.stderr
error: Missing `#[frame::runtime]`
 --> tests/construct_runtime_v2_ui/missing_runtime.rs:2:1
  |
2 | mod runtime {}
  | ^^^
