substrate/frame/support/test/tests/construct_runtime_v2_ui/missing_runtime.rs
#[frame_support::construct_runtime_v2]
mod runtime {}

fn main() {}
